--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>React Tailwind Boiler Project</title>
+  <title>tvmaze movie show</title>
 </head>
 
 <body>
